tests/ui/fail_modules.stderr
error: type name conflicted, cache fields arleady registered. maybe someone forgot to add `#[struct_cache_field::add_cache_field]`?
  --> tests/ui/fail_modules.rs:12:10
   |
12 |     impl Hoge {
   |          ^^^^

error[E0412]: cannot find type `Hoge` in this scope
 --> tests/ui/fail_modules.rs:3:10
  |
3 |     impl Hoge {
  |          ^^^^ not found in this scope
  |
help: consider importing this struct
  |
2 +     use crate::module2::Hoge;
  |
